# crlsc_kdn

./: README.md  pyproject.toml
models/: __init__.py  alignment_head.py  clip_encoder.py  feature_bank.py  projection_head.py  resnet_encoder.py  retriever.py  timm_encoder.py
stageA/: __init__.py  build_cloud_feature_bank.py  image_dataset.py
stageA/configs/: build_feature_bank.yaml
stageB/: __init__.py  local_dataset.py  losses.py  train_local_ssl.py  transforms.py
stageB/configs/: train_local_ssl.yaml
stageC/: __init__.py  train_joint_alignment.py
stageC/configs/: train_joint_alignment.yaml
